tests/NormalTests/paczka1/small_fuzzy/32707795.err
Error in line 5: imk7vjhh S44 @0,9
Error in line 4: imk7vjhh A271 16,5
